Updating code for remote execution & cross browser logic

--- a/src/test/resources/config/qa.config.properties
+++ b/src/test/resources/config/qa.config.properties
@@ -1,4 +1,4 @@
-browser = chrome
+browser = firefox
 url = https://naveenautomationlabs.com/opencart/index.php?route=account/login
 
 username = narendrakumarcv@gmail.com
@@ -7,3 +7,6 @@ password = June@2022
 highlight = true
 headless = false
 incognito = false
+
+remote = true
+huburl = http://localhost:4444/wd/hub 
